# AECS-informatique

./: README.md
apprentissage-piano-solfege/: README.md
c-multimedia/: .gitignore  Makefile  README.md  pipeline.c  pipeline.h  run-pipeline.c
cpp-interface-graphique/: CMakeLists.txt  README.md  main.cpp
creation-bandes-dessinees/: README.md
java-application-mobile/: README.md
java-application-mobile/AECS-android-app/: AndroidManifest.xml  Makefile  README.md
java-application-mobile/AECS-android-app/res/layout/: activity_main.xml
java-application-mobile/AECS-android-app/src/aecs/source/aecsandroidapp/: AECSAndroidApp.java
javascript-svg/: README.md  aleatoire.js  canevas.js  concentriques.js  courbe.js  utils.js
ligne-de-commande/: README.md  count.sh
programmation-graphique/: README.md
python-midi/: A-E-C-Si.musicxml  README.md  listen.py  play.py  ports.py  read-and-play.py
rust-parallelisme/: LICENSE  README.md
rust-parallelisme/bezier/: Cargo.toml
rust-parallelisme/bezier/src/: main.rs
wasm-euclidean/: README.md  binary-operator.wat  conditional.wat  iterative-gcd.wat  recursive-gcd.wat  run.js
web-livre-jeu/: README.md  index.html  script.js  style.css
